syntax = "proto3";

package coerce.sharding;

message AllocateShard {
  uint32 shard_id = 1;
}

message ShardAllocated {
  uint32 shard_id = 1;

  uint64 node_id = 2;
}

message RemoteEntityRequest {
  message Recipe {
    bytes recipe = 1;
  }

  string request_id = 1;

  string actor_id = 2;

  string message_type = 3;

  bytes message = 4;

  Recipe recipe = 5;

  uint64 origin_node = 6;
}

message ShardStateSnapshot {
  message Entity {
    string actor_id = 1;

    bytes recipe = 2;
  }

  uint32 shard_id = 1;

  uint64 node_id = 2;

  repeated Entity entities = 3;
}